removed bug in angle calculation

--- a/help/geocouche.html
+++ b/help/geocouche.html
@@ -14,7 +14,8 @@
 		<h1>geocouche</h1>
 		
 		<div>
-			<b>geocouche</b> is a GGIS plugin for processing geological meso-structures.
+			<b>geocouche</b> is a GGIS plugin for processing geological meso-structures, based on the module <b>apsg</b> by Ondrej Lexa.
+			<br />
 			<br />Currently, it can:
 			<ul>
 				<li>calculate the angles between planes stored in a layer and a reference plane</li>
