Removed strike-related bugs

--- a/help/geocouche.html
+++ b/help/geocouche.html
@@ -38,7 +38,7 @@
 		
 		<h2>Geological angles</h2>	
 	
-		This tool allows to calculate the angles (as degrees) between a reference plane and the features in a point layer (Fig. 2).
+		This tool allows to calculate the angles (as degrees) between a reference plane and the (eventually selected) features in a point layer (Fig. 2).
 		<br />It can be applied to determine the degree of misalignement between a reference (for instance, regional) measure and local geological measures.
 		
 		<figure>
@@ -76,7 +76,7 @@
 		<h4>Input from point layer</h4>
 		
 		When using a point layer (already loaded in the TOC), plane and/or axis attitudes
-		are defined via the fields storing their values (Fig. 5).
+		are defined via the fields storing their values (Fig. 5). If there is a selection, onmly selected features will be used.
 		
 		<figure>
 			<img src="ims/stereonet_02.png" alt="Stereonet interface">
@@ -130,7 +130,7 @@
 		<div style="font-size: 85%; font-style: italic;">
 		-----
 		<br /><br />
-		Doc version 2017-03-19, by Mauro Alberti - <a href="mailto:alberti.m65@gmail.com">alberti.m65@gmail.com</a>
+		Doc version 2017-03-20, by Mauro Alberti - <a href="mailto:alberti.m65@gmail.com">alberti.m65@gmail.com</a>
 		</div>
 
 		<br /><br />
