Modified helps for submodules

--- a/help/help_stereonet.html
+++ b/help/help_stereonet.html
@@ -16,12 +16,12 @@
 	
 		This tool allows to create stereonets representing geological plane and axis/slickenline attitudes
 		as great circles, poles, faults with slickenlines and T-L diagrams.
-		Its interface is represented in Fig. 2.
+		Its interface is represented in Fig. 1.
 		<br /><br />
 		<figure>
-			<img src="ims/geocouche_bl_total.png" alt="Geological stereonets">
+			<img src="ims/stereonet_fig_01.png" alt="Geological stereonets">
 			<br />
-			<figcaption>Fig. 2. Stereonet interface.</figcaption>
+			<figcaption>Fig. 1. Stereonet interface.</figcaption>
 		</figure>
 		<br /><br />
 		To plot data in a stereoplot, there are three main steps to follow:
@@ -34,13 +34,13 @@
 		
 		<h3>Choice of input data</h3>
 		
-		It is possible to use input data from data stored in a point layer (<i>Layer</i> tab, Fig. 3)
-		or to use text input (<i>Text</i> tab, Fig. 4).
+		It is possible to use input data from data stored in a point layer (<i>Layer</i> tab, Fig. 2)
+		or to use text input (<i>Text</i> tab, Fig. 3).
 		
 		<h4>Input from point layer</h4>
 		
 		When using a point layer already loaded in the TOC, plane and/or axis attitudes
-		are defined via the fields storing their values (Fig. 3). If there is a selection, only selected features will be used.
+		are defined via the fields storing their values (Fig. 2). If there is a selection, only selected features will be used.
 		<br />
 		<br />
 		Depending if you want to plot planes, lines/axis of faults with slickenlines, you have to define accordingly the source
@@ -53,9 +53,9 @@
 
 		<br /><br />
 		<figure>
-			<img src="ims/geocouche_bl_input_layer.png" alt="Input from point layer">
+			<img src="ims/stereonet_fig_02.png" alt="Input from point layer">
 			<br />
-			<figcaption>Fig. 3. Interface for input from point layer interface.</figcaption>
+			<figcaption>Fig. 2. Interface for input from point layer interface.</figcaption>
 		</figure>	
 		<br /><br />
 
@@ -74,12 +74,12 @@
 		<br />0&deg; > rakes > -180&deg; -> normal movements
 		<br />  
 		<br />When using rakes, slickenline trend and plunge does not need to be explicited.
-		<br />Moreover, when defined, rake values <u> take priority </u> above any defined trend-plunge and movement sense values (if present).
+		<br />Moreover, when defined, rake values <u> take priority</u> above any defined trend-plunge and movement sense values (if present).
 		  
 
 		<h4>Input from text</h4>
 		
-		The input can be inserted into a text window (Fig. 4), defining if data consist of:
+		The input can be inserted into a text window (Fig. 3), defining if data consist of:
 		<ul>
 			<li>planes</li>
 			<li>axes</li>
@@ -91,47 +91,47 @@
 		using dip direction or RHR strike.
 		<br /><br />
 		<figure>
-			<img src="ims/geocouche_bl_input_text.png" alt="Input from text">
+			<img src="ims/stereonet_fig_03.png" alt="Input from text">
 			<br />
-			<figcaption>Fig. 4. Input from text interface.</figcaption>
+			<figcaption>Fig. 3. Input from text interface.</figcaption>
 		</figure>	
 		<br /><br />
 		<h3>Plot style</h3>
 		
-		Styles can be defined for both great circles and poles: color, width/size, line/marker style, and transparency (Fig. 5).
+		Styles can be defined for both great circles and poles: color, width/size, line/marker style, and transparency (Fig. 4).
 		<br />Settings are stored in memory and resused in subsequent sessions.
 		<br /><br />
 		<figure>
-			<img src="ims/geocouche_bl_plot_style.png" alt="Plot style">
+			<img src="ims/stereonet_fig_04.png" alt="Plot style">
 			<br />
-			<figcaption>Fig. 5. Plot style interface.</figcaption>
+			<figcaption>Fig. 4. Plot style interface.</figcaption>
 		</figure>
 		<br /><br />
 		<h3>Stereonet plotting</h3>
 			
-		Plots can use a new or a pre-existing stereonet plot. Previous plots can be erased by using the button <b>Clear stereonet</b>  (see Fig. 2).
+		Plots can use a new or a pre-existing stereonet plot. Previous plots can be erased by using the button <b>Clear stereonet</b>  (see Fig. 1).
 		<br />Plane can be plotted as great circles or as plane normals, axes as poles or as normal great circles, faults with slickenlines
-		as great circles with arrows or alternatvely as T-L diagrams (Fig. 6).
+		as great circles with arrows or alternatvely as T-L diagrams (Fig. 5).
 		<br /><br />
 		<figure>
-			<img src="ims/geocouche_bl_plot_choices.png" alt="Stereonet plotting">
+			<img src="ims/stereonet_fig_05.png" alt="Stereonet plotting">
 			<br />
-			<figcaption>Fig. 6. Stereonet plot interface.</figcaption>
+			<figcaption>Fig. 5. Stereonet plot interface.</figcaption>
 		</figure>
 		<br /><br />
-		An example of stereonet is shown in Fig. 7.
+		An example of stereonet is shown in Fig. 6.
 		<br /><br />
 		<figure>
-			<img src="ims/stereonet_06.png" alt="Stereonet interface">
+			<img src="ims/stereonet_fig_06.png" alt="Stereonet interface">
 			<br />
-			<figcaption>Fig. 7. Stereonet example.</figcaption>
+			<figcaption>Fig. 6. Stereonet example.</figcaption>
 		</figure>
 		<br /><br />
 
 		<div style="font-size: 85%; font-style: italic;">
 		-----
 		<br /><br />
-		Doc version 2018-08-29, by Mauro Alberti - <a href="mailto:alberti.m65@gmail.com">alberti.m65@gmail.com</a>
+		Doc version 2018-09-01, by Mauro Alberti - <a href="mailto:alberti.m65@gmail.com">alberti.m65@gmail.com</a>
 		</div>
 
 		<br /><br />
